--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
     "mocha": "5.2.0",
     "mocha-jsdom": "~1.1.0",
     "mocha-multi": "1.0.1"
+  },
+  "dependencies": {
+    "node": "^18.5.0",
+    "update": "^0.7.4"
   }
 }
